[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fastango"
dynamic = ["version"]
description = "A uv-first CLI for generating FastAPI projects with optional integrations."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "Yasser Tahiri", email = "hello@yezz.me" },
]
keywords = ["FastAPI", "CLI", "scaffold", "template", "uv", "Pydantic"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Framework :: FastAPI",
    "Framework :: Pydantic",
    "Framework :: Pydantic :: 2",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Code Generators",
]
dependencies = [
    "jinja2>=3.1.6",
    "pydantic>=2.7.0",
    "rich>=13.7.0",
    "typer>=0.12.0",
]

[project.optional-dependencies]
ai = [
    "httpx>=0.27.0",
]

[project.urls]
Homepage = "https://github.com/yezz123/fastango"
Repository = "https://github.com/yezz123/fastango"
Issues = "https://github.com/yezz123/fastango/issues"
Funding = "https://github.com/sponsors/yezz123"

[project.scripts]
fastango = "fastango.cli:app"

[dependency-groups]
dev = [
    { include-group = "lint" },
    { include-group = "test" },
    { include-group = "type" },
]
lint = [
    "pre-commit>=3.6.2",
    "ruff>=0.8.0",
]
test = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
]
type = [
    "mypy>=1.10.0",
]

[tool.hatch.version]
path = "fastango/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["fastango"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP", "SIM"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101"]

[tool.mypy]
python_version = "3.10"
strict = true
packages = ["fastango"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--strict-markers"
markers = [
    "slow: tests that create and execute generated projects",
]

[tool.coverage.run]
source = ["fastango"]
branch = true

[tool.coverage.report]
precision = 2
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]
